--- a/practicas/proyecto/project-admin/src/main/java/org/magmax/master/project/admin/user/UserPanel.form
+++ b/practicas/proyecto/project-admin/src/main/java/org/magmax/master/project/admin/user/UserPanel.form
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -24,11 +24,11 @@
                       <Component id="isAdmin" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="217" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="nameEntry" max="32767" attributes="0"/>
+                  <Component id="nameEntry" pref="321" max="32767" attributes="0"/>
               </Group>
           </Group>
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
-          <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" pref="373" max="32767" attributes="0"/>
+          <Component id="jPanel2" alignment="0" pref="373" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
